// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CartQuantityPicker stories snapshot > AtStockLimit story renders and matches snapshot 1`] = `
<div
  class="relative flex w-fit max-w-full flex-col items-start gap-2"
>
  <label
    class="items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 block text-left font-sans text-base font-semibold leading-6 text-card-foreground"
    data-slot="label"
    for="quantity"
  >
    Quantity
  </label>
  <div
    class="inline-flex items-center border border-input rounded-none"
  >
    <button
      aria-label="Decrement Quantity for the product"
      class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
      data-testid="quantity-decrement"
    >
      −
    </button>
    <input
      aria-label="Quantity"
      class="w-9 text-center text-sm font-semibold leading-normal text-foreground border-0 bg-transparent focus:outline-none focus:ring-0 disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
      max="10"
      min="0"
      step="1"
      type="number"
      value="10"
    />
    <button
      aria-label="Increment Quantity for the product"
      class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
      data-testid="quantity-increment"
      disabled=""
    >
      +
    </button>
  </div>
  <p
    aria-live="polite"
    class="text-sm font-medium leading-none text-left absolute top-full left-0 mt-1 w-max max-w-[min(100%,18rem)] text-destructive"
    role="alert"
  >
    Maximum stock reached
  </p>
</div>
`;

exports[`CartQuantityPicker stories snapshot > Default story renders and matches snapshot 1`] = `
<div
  class="relative flex w-fit max-w-full flex-col items-start gap-2"
>
  <label
    class="items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 block text-left font-sans text-base font-semibold leading-6 text-card-foreground"
    data-slot="label"
    for="quantity"
  >
    Quantity
  </label>
  <div
    class="inline-flex items-center border border-input rounded-none"
  >
    <button
      aria-label="Decrement Quantity for the product"
      class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
      data-testid="quantity-decrement"
      disabled=""
    >
      −
    </button>
    <input
      aria-label="Quantity"
      class="w-9 text-center text-sm font-semibold leading-normal text-foreground border-0 bg-transparent focus:outline-none focus:ring-0 disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
      min="0"
      step="1"
      type="number"
      value="1"
    />
    <button
      aria-label="Increment Quantity for the product"
      class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
      data-testid="quantity-increment"
    >
      +
    </button>
  </div>
</div>
`;
